syntax = "proto3";

option java_multiple_files = true;
option java_package = 'rpcstubs';

package baseservice; // package do proto

service Server {
 rpc Write(KeyValuePair) returns (Void) ;
 rpc Read(Key) returns (Value) ;
 rpc ReadChk(Key) returns (Value);
 rpc ElectionProcess(Void) returns (Void);
 rpc StopSelfElection(MonitorObj) returns (Void);
 rpc InvalidateReplicas(Key) returns (Void);
 rpc CreateReplica(KeyValuePair) returns (Void);
}


message Void {}

message MonitorObj{
    string ip = 1;
    string port = 2;
}

message KeyValuePair {
 Key k = 1;
 Value v = 2;
}

message Key {
 string k = 1;
}

message Value {
 string v = 1;
}